fix: wrong padding in commit before

--- a/docroot/_diffs/css/custom_pa_tablet.css
+++ b/docroot/_diffs/css/custom_pa_tablet.css
@@ -127,7 +127,7 @@
 
 	// padding
 	.aui #wrapper {
-   		padding-left: 0px;
+   		padding-left: 2px;
     		padding-right: 4px;
 	}
 
